2010-09-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-put-image): Use the deleted text as the image
	alt text.

	* gnus.el (gnus-string-or): Fix the syntax to not use eval or
	overshadow variable bindings.

2010-09-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-html.el (gnus-html-wash-tags)
	(gnus-html-schedule-image-fetching, gnus-html-prefetch-images): Add
	extra logging.

2010-09-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-wash-tags): Delete the IMG_ALT region. 
	(gnus-max-image-proportion): New variable.
	(gnus-html-rescale-image): New function.
	(gnus-html-put-image): Rescale images.

2010-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-article-html): Decode contents by charset.

2010-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-cache-directory, gnus-html-cache-size)
	(gnus-html-frame-width, gnus-blocked-images)
	* message.el (message-prune-recipient-rules): Add custom version.
	* gnus-sum.el (gnus-auto-expirable-marks): Bump custom version.

	* gnus-ems.el (gnus-process-get, gnus-process-put): New compatibility
	functions.

	* gnus-html.el (gnus-html-curl-sentinel): Replace process-get with
	gnus-process-get.

2010-08-31  Julien Danjou  <julien@danjou.info>  (tiny change)

	* nnimap.el (nnimap-request-newgroups): Use nnimap-request-list-method
	instead of lsub directly.

2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnwarchive.el: Removed.

	* gnus-soup.el: Removed.

	* nnsoup.el: Removed.

	* nnultimate.el: Removed.

	* gnus-html.el (gnus-blocked-images): New variable.

	* message.el (message-prune-recipients): New function.
	(message-prune-recipient-rules): New variable.

	* gnus-cite.el (gnus-article-natural-long-line-p): New function to
	guess whether a long line is natural text or not.

	* gnus-html.el (gnus-html-schedule-image-fetching): Use
	gnus-process-plist and friends for compatibility.
